--- a/web-app/orders/templates/orders/menu_rider.html
+++ b/web-app/orders/templates/orders/menu_rider.html
@@ -4,10 +4,12 @@
 {% block content %}
 
 
-<button class="btn btn-primary menu-btn"><a class="menu-btn" href="{% url 'orders:request_ride' %}">request a ride</a></button>
+    <button class="btn btn-primary menu-btn"><a class="menu-btn" href="{% url 'orders:request_ride' %}">request a ride</a></button>
 
-<button class="btn btn-primary"><a class="menu-btn" href="{% url 'orders:check_ride_rider' %}">check order list</a></button>
+    <button class="btn btn-primary"><a class="menu-btn" href="{% url 'orders:check_ride_rider' %}">check order list</a></button>
 
-<button class="btn btn-primary"><a class="menu-btn" href="{% url 'orders:join_ride_list' %}">join a ride</a></button>
+    <button class="btn btn-primary"><a class="menu-btn" href="{% url 'orders:join_ride_search' %}">join a ride</a></button>
+
+    <button class="btn btn-primary"><a class="menu-btn" href="{% url 'orders:my_ride_list' %}">my ride</a></button>
 
 {% endblock %}
