--- a/web-app/orders/templates/orders/menu_rider.html
+++ b/web-app/orders/templates/orders/menu_rider.html
@@ -6,7 +6,7 @@
 
     <button class="btn btn-primary menu-btn"><a class="menu-btn" href="{% url 'orders:request_ride' %}">request a ride</a></button>
 
-    <button class="btn btn-primary"><a class="menu-btn" href="{% url 'orders:check_ride_rider' %}">check order list</a></button>
+    <button class="btn btn-primary"><a class="menu-btn" href="{% url 'orders:check_ride_rider' %}">modify my orders</a></button>
 
     <button class="btn btn-primary"><a class="menu-btn" href="{% url 'orders:join_ride_search' %}">join a ride</a></button>
 
