--- a/web-app/orders/templates/orders/request_ride.html
+++ b/web-app/orders/templates/orders/request_ride.html
@@ -3,6 +3,7 @@
 {% block content %}
 <form method="post">{% csrf_token %}
     {{ form.as_p }}
+    {{ order_form.as_p }}
     <input type="submit" value="Save">
 </form>
 
