--- a/web-app/orders/templates/orders/menu_driver.html
+++ b/web-app/orders/templates/orders/menu_driver.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <button><a class="btn btn-primary" href="{% url 'orders:check_order_driver' %}">check open orders</a></button>
-    <button><a class="btn btn-primary" href="{% url 'orders:check_my_order_driver' %}">my current orders</a></button>
+{#    <button><a class="btn btn-info" href="{% url 'orders:check_order_driver' %}">check open orders</a></button>#}
+{#    <button><a class="btn btn-info" href="{% url 'orders:check_my_order_driver' %}">my current orders</a></button>#}
+
+    <form method="post">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-info" name="open_orders">check open orders</button>
+        <button type="submit" class="btn btn-info" name="current_orders">my current orders</button>
+    </form>
 {% endblock %}
