--- a/web-app/templates/registration/signup.html
+++ b/web-app/templates/registration/signup.html
@@ -29,6 +29,12 @@
                     <div class="help">Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.</div>
                 </div>
             </div>
+            <div class="form-row field-email">
+                <div>
+                    <label for="id_email">Email address:</label>
+                    <input type="email" name="email" class="vTextField" maxlength="254" id="id_email">
+                </div>
+            </div>
             <div class="form-row field-password1">
                 <div>
                     <label class="required" for="id_password1">Password:</label>
