--- a/web-app/templates/home.html
+++ b/web-app/templates/home.html
@@ -17,14 +17,7 @@
 {##}
 {#{% endblock %}#}
 
-{% extends "base.html" %}
 
-<head>
-    <title>Home Page</title>
-</head>
-
-
-{% block content %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -36,23 +29,25 @@
     <title>Stack - Bootstrap 4 Business Template</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" >
-    <!-- Icon -->
-    <link rel="stylesheet" href="assets/fonts/line-icons.css">
-    <!-- Slicknav -->
-    <link rel="stylesheet" href="assets/css/slicknav.css">
-    <!-- Owl carousel -->
-    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/css/owl.theme.css">
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'orders/assets/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'orders/assets/fonts/line-icons.css' %}">
 
-    <link rel="stylesheet" href="assets/css/magnific-popup.css">
-    <link rel="stylesheet" href="assets/css/nivo-lightbox.css">
+    <!-- Icon -->
+    <!-- Slicknav -->
+    <link rel="stylesheet" href="{% static 'orders/assets/css/slicknav.css' %}">
+    <!-- Owl carousel -->
+    <link rel="stylesheet" href="{% static 'orders/assets/css/owl.carousel.min.css' %}">
+    <link rel="stylesheet" href="{% static 'orders/assets/css/owl.theme.css' %}">
+
+    <link rel="stylesheet" href="{% static 'orders/assets/css/magnific-popup.css' %}">
+    <link rel="stylesheet" href="{% static 'orders/assets/css/nivo-lightbox.css' %}">
     <!-- Animate -->
-    <link rel="stylesheet" href="assets/css/animate.css">
+    <link rel="stylesheet" href="{% static 'orders/assets/css/animate.css' %}">
     <!-- Main Style -->
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="{% static 'orders/assets/css/main.css' %}">
     <!-- Responsive Style -->
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="{% static 'orders/assets/css/responsive.css' %}">
 
   </head>
   <body>
@@ -65,7 +60,7 @@
           <!-- Brand and toggle get grouped for better mobile display -->
 {#          <a href="index.html" class="navbar-brand"><img src="assets/img/logo.png" alt=""></a>#}
             {% load static %}
-            <a href="index.html" class="navbar-brand"><img src="{% static 'assets/img/logo.png' %}" alt=""></a>
+            <a href="index.html" class="navbar-brand"><img src="{% static 'orders/assets/img/logo.png' %}" alt=""></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <i class="lni-menu"></i>
           </button>
@@ -610,7 +605,7 @@
                   <div class="fancy-table">
                     <div class="table-cell">
                       <div class="zoom-icon">
-                        <a class="lightbox" href="assets/img/portfolio/img-1.jpg"><i class="lni-eye item-icon"></i></a>
+                        <a class="lightbox" href="{% static 'orders/assets/img/portfolio/img-1.jpg' %}"><i class="lni-eye item-icon"></i></a>
                       </div>
                       <a href="#">Creative Design</a>
                     </div>
@@ -627,7 +622,7 @@
                   <div class="fancy-table">
                     <div class="table-cell">
                       <div class="zoom-icon">
-                        <a class="lightbox" href="assets/img/portfolio/img-2.jpg"><i class="lni-eye item-icon"></i></a>
+                        <a class="lightbox" href="{% static 'orders/assets/img/portfolio/img-2.jpg' %}"><i class="lni-eye item-icon"></i></a>
                       </div>
                       <a href="#">Retina Ready</a>
                     </div>
@@ -644,7 +639,7 @@
                   <div class="fancy-table">
                     <div class="table-cell">
                       <div class="zoom-icon">
-                        <a class="lightbox" href="assets/img/portfolio/img-3.jpg"><i class="lni-eye item-icon"></i></a>
+                        <a class="lightbox" href="{% static 'orders/assets/img/portfolio/img-3.jpg' %}"><i class="lni-eye item-icon"></i></a>
                       </div>
                       <a href="#">Responsive</a>
                     </div>
@@ -661,7 +656,7 @@
                   <div class="fancy-table">
                     <div class="table-cell">
                       <div class="zoom-icon">
-                        <a class="lightbox" href="assets/img/portfolio/img-4.jpg"><i class="lni-eye item-icon"></i></a>
+                        <a class="lightbox" href="{% static 'orders/assets/img/portfolio/img-4.jpg' %}"><i class="lni-eye item-icon"></i></a>
                       </div>
                       <a href="#">Well Documented</a>
                     </div>
@@ -678,7 +673,7 @@
                   <div class="fancy-table">
                     <div class="table-cell">
                       <div class="zoom-icon">
-                        <a class="lightbox" href="assets/img/portfolio/img-5.jpg"><i class="lni-eye item-icon"></i></a>
+                        <a class="lightbox" href="{% static 'orders/assets/img/portfolio/img-5.jpg' %}"><i class="lni-eye item-icon"></i></a>
                       </div>
                       <a href="#">Customer Support</a>
                     </div>
@@ -695,7 +690,7 @@
                   <div class="fancy-table">
                     <div class="table-cell">
                       <div class="zoom-icon">
-                        <a class="lightbox" href="assets/img/portfolio/img-6.jpg"><i class="lni-eye item-icon"></i></a>
+                        <a class="lightbox" href="{% static 'orders/assets/img/portfolio/img-6.jpg' %}"><i class="lni-eye item-icon"></i></a>
                       </div>
                       <a href="#">User Friendly</a>
                     </div>
@@ -1015,26 +1010,25 @@
     <!-- End Preloader -->
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="assets/js/jquery-min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
-    <script src="assets/js/jquery.mixitup.js"></script>
-    <script src="assets/js/wow.js"></script>
-    <script src="assets/js/jquery.nav.js"></script>
-    <script src="assets/js/scrolling-nav.js"></script>
-    <script src="assets/js/jquery.easing.min.js"></script>
-    <script src="assets/js/jquery.counterup.min.js"></script>
-    <script src="assets/js/nivo-lightbox.js"></script>
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/waypoints.min.js"></script>
-    <script src="assets/js/jquery.slicknav.js"></script>
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/form-validator.min.js"></script>
-    <script src="assets/js/contact-form-script.min.js"></script>
+    <script src="{% static 'orders/assets/js/jquery-min.js' %}"></script>
+    <script src="{% static 'orders/assets/js/popper.min.js' %}"></script>
+    <script src="{% static 'orders/assets/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'orders/assets/js/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'orders/assets/js/jquery.mixitup.js' %}"></script>
+    <script src="{% static 'orders/assets/js/wow.js' %}"></script>
+    <script src="{% static 'orders/assets/js/jquery.nav.js' %}"></script>
+    <script src="{% static 'orders/assets/js/scrolling-nav.js' %}"></script>
+    <script src="{% static 'orders/assets/js/jquery.easing.min.js' %}"></script>
+    <script src="{% static 'orders/assets/js/jquery.counterup.min.js' %}"></script>
+    <script src="{% static 'orders/assets/js/nivo-lightbox.js' %}"></script>
+    <script src="{% static 'orders/assets/js/jquery.magnific-popup.min.js' %}"></script>
+    <script src="{% static 'orders/assets/js/waypoints.min.js' %}"></script>
+    <script src="{% static 'orders/assets/js/jquery.slicknav.js' %}"></script>
+    <script src="{% static 'orders/assets/js/main.js' %}"></script>
+    <script src="{% static 'orders/assets/js/form-validator.min.js' %}"></script>
+    <script src="{% static 'orders/assets/js/contact-form-script.min.js' %}"></script>
 
   </body>
 </html>
 
 
-{% endblock %}
