--- a/web-app/statics/orders/css/style.css
+++ b/web-app/statics/orders/css/style.css
@@ -1,3 +1,12 @@
 .menu-btn {
   color: white;
 }
+
+.lele_li {
+  color : black;
+}
+
+.btn_padding {
+  margin-left: 15px;
+  margin-right: 15px;
+}
