--- a/web-app/templates/home.html
+++ b/web-app/templates/home.html
@@ -17,105 +17,17 @@
 {##}
 {#{% endblock %}#}
 
+{% extends "base.html" %}
 
+<head>
+    <title>Home Page</title>
+</head>
+{% block content %}
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <title>Stack - Bootstrap 4 Business Template</title>
-
-    <!-- Bootstrap CSS -->
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'orders/assets/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'orders/assets/fonts/line-icons.css' %}">
-
-    <!-- Icon -->
-    <!-- Slicknav -->
-    <link rel="stylesheet" href="{% static 'orders/assets/css/slicknav.css' %}">
-    <!-- Owl carousel -->
-    <link rel="stylesheet" href="{% static 'orders/assets/css/owl.carousel.min.css' %}">
-    <link rel="stylesheet" href="{% static 'orders/assets/css/owl.theme.css' %}">
-
-    <link rel="stylesheet" href="{% static 'orders/assets/css/magnific-popup.css' %}">
-    <link rel="stylesheet" href="{% static 'orders/assets/css/nivo-lightbox.css' %}">
-    <!-- Animate -->
-    <link rel="stylesheet" href="{% static 'orders/assets/css/animate.css' %}">
-    <!-- Main Style -->
-    <link rel="stylesheet" href="{% static 'orders/assets/css/main.css' %}">
-    <!-- Responsive Style -->
-    <link rel="stylesheet" href="{% static 'orders/assets/css/responsive.css' %}">
-
-  </head>
-  <body>
 
     <!-- Header Area wrapper Starts -->
     <header id="header-wrap">
-      <!-- Navbar Start -->
-      <nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar">
-        <div class="container">
-          <!-- Brand and toggle get grouped for better mobile display -->
-{#          <a href="index.html" class="navbar-brand"><img src="assets/img/logo.png" alt=""></a>#}
-            {% load static %}
-            <a href="index.html" class="navbar-brand"><img src="{% static 'orders/assets/img/logo.png' %}" alt=""></a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="lni-menu"></i>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav mr-auto w-100 justify-content-end clearfix">
-              <li class="nav-item active">
-                <a class="nav-link" href="#hero-area">
-                  Home
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#feature">
-                  Feature
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#services">
-                  Services
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#team">
-                  Team
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#pricing">
-                  Pricing
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#portfolios">
-                  Works
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#testimonial">
-                  Testimonial
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#blog">
-                  Blog
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#contact">
-                  Contact
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <!-- Navbar End -->
+
 
       <!-- Hero Area Start -->
       <div id="hero-area" class="hero-area-bg">
@@ -140,51 +52,42 @@
     </header>
     <!-- Header Area wrapper End -->
 
+    {% load static %}
     <!-- Feature Section Start -->
     <div id="feature">
       <div class="container-fluid">
-        <div class="row">
-          <div class="col-lg-6 col-md-12 col-sm-12">
-            <div class="text-wrapper">
-              <div>
-                <h2 class="title-hl wow fadeInLeft" data-wow-delay="0.3s">We are helping to grow <br> your business.</h2>
-                <p class="mb-4">A digital studio specialising in User Experience & eCommerce, we combine innovation with digital craftsmanship to help brands fulfill their potential.</p>
-                <a href="#" class="btn btn-common">More About Us</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6 col-md-12 col-sm-12 padding-none feature-bg">
-            <div class="feature-thumb">
+        <h2 class="row">
+
+{#          <div class="col-lg-6 col-md-12 col-sm-12">#}
+{#            <div class="text-wrapper">#}
+{#              <div>#}
+{#                <h2 class="title-hl wow fadeInLeft" data-wow-delay="0.3s">We are helping to grow <br> your business.</h2>#}
+{#                <p class="mb-4">A digital studio specialising in User Experience & eCommerce, we combine innovation with digital craftsmanship to help brands fulfill their potential.</p>#}
+{#                <a href="#" class="btn btn-common">More About Us</a>#}
+{#              </div>#}
+{#            </div>#}
+{#          </div>#}
+        <form method="post">
+        {% csrf_token %}
+            <button class="col-lg-6 col-md-12 col-sm-12  padding-none filter active btn btn-effect" type="submit" name="rider">
               <div class="feature-item wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-                <div class="icon">
-                  <i class="lni-microphone"></i>
-                </div>
-                <div class="feature-content">
-                  <h3>What we do</h3>
-                  <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia con- sequuntur magni dolores </p>
+                <div>
+                  <h3>I am a user</h3>
+                  <p style="color: #0b0b0b">Become a customer to create or join rides! </p>
                 </div>
               </div>
-              <div class="feature-item wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="500ms">
-                <div class="icon">
-                  <i class="lni-users"></i>
-                </div>
-                <div class="feature-content">
-                  <h3>Meet our team</h3>
-                  <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia con- sequuntur magni dolores </p>
-                </div>
-              </div>
-              <div class="feature-item wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="700ms">
-                <div class="icon">
-                  <i class="lni-medall-alt"></i>
-                </div>
-                <div class="feature-content">
-                  <h3>Our Creation</h3>
-                  <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia con- sequuntur magni dolores </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+          </button>
+
+          <button class="col-lg-6 col-md-12 col-sm-12 padding-none feature-bg btn-effect active" type="submit" name="driver">
+              <div class="feature-item wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+            <h3
+            style="color:white">I am a driver</h3>
+              <p style="color: white">Become a driver and earn money! </p>
+
+                          </div>
+          </button>
+        </form>
+        </h2>
       </div>
     </div>
     <!-- Feature Section End -->
@@ -979,7 +882,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-3 col-xs-12">
             <div class="footer-logo">
-              <img src="assets/img/logo.png" alt="">
+              <h2>Lyber</h2>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-xs-12">
@@ -1009,26 +912,11 @@
     </div>
     <!-- End Preloader -->
 
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="{% static 'orders/assets/js/jquery-min.js' %}"></script>
-    <script src="{% static 'orders/assets/js/popper.min.js' %}"></script>
-    <script src="{% static 'orders/assets/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'orders/assets/js/owl.carousel.min.js' %}"></script>
-    <script src="{% static 'orders/assets/js/jquery.mixitup.js' %}"></script>
-    <script src="{% static 'orders/assets/js/wow.js' %}"></script>
-    <script src="{% static 'orders/assets/js/jquery.nav.js' %}"></script>
-    <script src="{% static 'orders/assets/js/scrolling-nav.js' %}"></script>
-    <script src="{% static 'orders/assets/js/jquery.easing.min.js' %}"></script>
-    <script src="{% static 'orders/assets/js/jquery.counterup.min.js' %}"></script>
-    <script src="{% static 'orders/assets/js/nivo-lightbox.js' %}"></script>
-    <script src="{% static 'orders/assets/js/jquery.magnific-popup.min.js' %}"></script>
-    <script src="{% static 'orders/assets/js/waypoints.min.js' %}"></script>
-    <script src="{% static 'orders/assets/js/jquery.slicknav.js' %}"></script>
-    <script src="{% static 'orders/assets/js/main.js' %}"></script>
-    <script src="{% static 'orders/assets/js/form-validator.min.js' %}"></script>
-    <script src="{% static 'orders/assets/js/contact-form-script.min.js' %}"></script>
 
-  </body>
-</html>
+        <form method="post">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-info" name="rider">I'am a rider</button>
+        <button type="submit" class="btn btn-info" name="driver">I'am a driver</button>
+    </form>
 
-
+{% endblock %}
