--- a/web-app/templates/registration/login.html
+++ b/web-app/templates/registration/login.html
@@ -15,26 +15,26 @@
         {% endif %}
     {% endif %}
 
-    <form method="post" action="{% url 'login' %}">
+    <form class="form-check" method="post" action="{% url 'login' %}">
         {% csrf_token %}
 
         <div>
-            <td>{{ form.username.label_tag }}</td>
-            <td>{{ form.username }}</td>
+            <td class="form-control">{{ form.username.label_tag }}</td>
+            <td class="form-control">{{ form.username }}</td>
         </div>
         <div>
-            <td>{{ form.password.label_tag }}</td>
-            <td>{{ form.password }}</td>
+            <td class="form-control">{{ form.password.label_tag }}</td>
+            <td class="form-control">{{ form.password }}</td>
         </div>
 
         <div>
-            <input type="submit" value="login"/>
-            <input type="hidden" name="next" value="{{ next }}"/>
+            <input class="btn btn-common" type="submit" value="login"/>
+
         </div>
     </form>
+<a  href="{% url 'signUp' %}">Sign Up</a>
 
-    <button><a href="{% url 'signUp' %}">Sign Up</a></button>
+
     {# Assumes you setup the password_reset view in your URLconf #}
     <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
-
 {% endblock %}
