--- a/web-app/templates/index.html
+++ b/web-app/templates/index.html
@@ -880,6 +880,7 @@
           <div class="col-md-6 col-lg-6 col-sm-12">
             <div class="contact-block">
               <form id="contactForm">
+                  {% csrf_token %}
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group">
