--- a/web-app/orders/templates/driver/check_order_driver.html
+++ b/web-app/orders/templates/driver/check_order_driver.html
@@ -29,7 +29,7 @@
 
     {% if latest_ride_list %}
 
-        <div class="row" style="margin-right: 100px">
+        <div class="row" >
         <!-- column -->
         <div class="col-12">
             <div class="card" style="margin-left: 50px; border: none" >
@@ -73,12 +73,10 @@
                 </div>
             </div>
         </div>
+        </div>
     {% else %}
         <p>No rides are available.</p>
     {% endif %}
 
-
-
+    <div style="height: 250px;"></div>
 {% endblock %}
-
-
