--- a/web-app/orders/templates/orders/ride_detail.html
+++ b/web-app/orders/templates/orders/ride_detail.html
@@ -41,10 +41,6 @@
                                 <li class="lele_li">Special request: {{ ride.special_request }}</li>
                             </h1>
                         </ul>
-                        <form action="." method="post">
-                            <button type="submit" class="btn btn-info btn_padding" name="confirm">Confirm Order</button>
-                            <button type="submit" class="btn btn-info btn_padding" name="finish">Finish Order</button>
-                        </form>
                     </div>
                 </div>
 
@@ -71,6 +67,7 @@
                             </h1>
                         </ul>
                         <form action="." method="post">
+                            {% csrf_token %}
                             <button class="btn btn-common">Get It</button>
                         </form>
                     </div>
@@ -93,7 +90,7 @@
                                 <li class="lele_li">Email: {{ order.owner.email }}</li>
                             </h1>
                         </ul>
-                        <form action="." method="post">
+                        <form action="." method="post"> {% csrf_token %}
                             <button class="btn btn-common">Get It</button>
                         </form>
                     </div>
@@ -118,6 +115,7 @@
                             </h1>
                         </ul>
                         <form action="." method="post">
+                            {% csrf_token %}
                             <button class="btn btn-common">Get It</button>
                         </form>
                     </div>
