--- a/web-app/templates/single-post.html
+++ b/web-app/templates/single-post.html
@@ -123,6 +123,7 @@
                   </li>
                 </ul>
               <form id="comment-form">
+                  {% csrf_token %}
                 <div class="row">
                   <div class="col-md-4">
                     <div class="form-group">
